force-app/main/default/objects/Picklist_Filter__mdt/Picklist_Filter__mdt.object-meta.xml
<CustomObject>
    <label>Picklist Filter</label>
    <pluralLabel>Picklist Filters</pluralLabel>
</CustomObject>