force-app/main/default/objects/Picklist_Filter__mdt/fields/Controlling_Field__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Field__c</fullName>
    <description>Field that filters picklists 1 and 2</description>
    <label>Controlling Field</label>
    <metadataRelationshipControllingField>Picklist_Filter__mdt.Filtered_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Picklist_Filters2</relationshipLabel>
    <relationshipName>Picklist_Filters2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>