force-app/main/default/objects/Picklist_Filter__mdt/fields/Controlling_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Field_Values__c</fullName>
    <description>Fields from controlling field that are applied to picklists 1 and 2</description>
    <label>Controlling Field Values</label>
    <type>TextArea</type>
</CustomField>