force-app/main/default/objects/Picklist_Filter__mdt/fields/Filtered_Object__c.field-meta.xml
<CustomField>
    <fullName>Filtered_Object__c</fullName>
    <label>Filtered Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Picklist_Filters</relationshipLabel>
    <relationshipName>Picklist_Filters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>