force-app/main/default/objects/Picklist_Filter__mdt/fields/Filtered_Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Filtered_Picklist_1__c</fullName>
    <label>Filtered Picklist 1</label>
    <metadataRelationshipControllingField>Picklist_Filter__mdt.Filtered_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Picklist_Filters</relationshipLabel>
    <relationshipName>Picklist_Filters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>