force-app/main/default/objects/Picklist_Filter__mdt/fields/Filtered_Picklist_1_Value__c.field-meta.xml
<CustomField>
    <fullName>Filtered_Picklist_1_Value__c</fullName>
    <label>Filtered Picklist 1 Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>