force-app/main/default/objects/Picklist_Filter__mdt/fields/Filtered_Picklist_2__c.field-meta.xml
<CustomField>
    <fullName>Filtered_Picklist_2__c</fullName>
    <label>Filtered Picklist 2</label>
    <metadataRelationshipControllingField>Picklist_Filter__mdt.Filtered_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Picklist_Filters1</relationshipLabel>
    <relationshipName>Picklist_Filters1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>