force-app/main/default/objects/Picklist_Filter__mdt/listViews/All_w_Fields.listView-meta.xml
<ListView>
    <fullName>All_w_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Filtered_Object__c</columns>
    <columns>Filtered_Picklist_1__c</columns>
    <columns>Filtered_Picklist_1_Value__c</columns>
    <columns>Filtered_Picklist_2__c</columns>
    <columns>Filtered_Picklist_2_Value__c</columns>
    <columns>Controlling_Field__c</columns>
    <columns>Controlling_Field_Values__c</columns>
    <filterScope>Everything</filterScope>
    <label>All w Fields</label>
    <language>en_US</language>
    <sharedTo>
        <role>Salesforce_Administrator</role>
    </sharedTo>
</ListView>